added Email sending and edit user profile

--- a/NewsApp/Views/Shared/_HeaderPartial.cshtml
+++ b/NewsApp/Views/Shared/_HeaderPartial.cshtml
@@ -3,11 +3,11 @@
     <h1><a asp-area="" asp-controller="Home" asp-action="Index">Future Imperfect</a></h1>
     <nav class="links">
         <ul>
-            <li><a asp-area="admin">Admin</a></li>
+            <li><a asp-area="admin" asp-controller="Home" asp-action="Index">Admin</a></li>
             <li><a href="#">Ipsum</a></li>
             <li><a href="#">Feugiat</a></li>
             <li><a href="#">Tempus</a></li>
-            <li><a href="#">Adipiscing</a></li>
+            <li><a asp-area="" asp-controller="Home" asp-action="Contacts">Contacts</a></li>
         </ul>
     </nav>
     <nav class="main">
