--- a/NewsApp/Views/Shared/_Layout.cshtml
+++ b/NewsApp/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
         <!-- Wrapper -->
         <div id="wrapper">
-
+            @ViewBag.ImgRes = @
             @await Html.PartialAsync("_HeaderPartial")
 
             <!-- Menu -->
