--- a/NewsApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/NewsApp/Areas/Admin/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                             <a href="#" onclick="document.getElementById('form-@entity.Id').submit();">удалить</a>
                         </form>
                         |
-                        <a asp-area="" asp-controller="Articles" asp-action="Index" asp-route-id="@entity.Id">
+                        <a asp-area="" asp-controller="Home" asp-action="ShowArctcle" asp-route-id="@entity.Id">
                             @($"{entity.Title}")
                         </a>
                     </div>
@@ -35,12 +35,10 @@
             </div>
         }
     </div>
-    @*<div class="div-box">
+    <div class="div-box">
             <h3>Редактировать страницы сайта</h3>
-            <a asp-area="Admin" asp-controller="TextFields" asp-action="Edit" asp-route-codeWord="PageIndex">Главная</a>
-            <a asp-area="Admin" asp-controller="TextFields" asp-action="Edit" asp-route-codeWord="PageServices">Наши статьи</a>
             <a asp-area="Admin" asp-controller="TextFields" asp-action="Edit" asp-route-codeWord="PageContacts">Контакты</a>
-        </div>*@
+        </div>
     <div class="div-box">
         <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
             <input type="submit" value="Выйти" />
