--- a/NewsApp/wwwroot/css/site.css
+++ b/NewsApp/wwwroot/css/site.css
@@ -69,3 +69,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.imgLogo {
+    max-height: 400px;
+    max-width: 500px;
+    margin-bottom: 60px;
+}
