--- a/NewsApp/Views/Shared/_MenuPartial.cshtml
+++ b/NewsApp/Views/Shared/_MenuPartial.cshtml
@@ -6,7 +6,7 @@
 
     <!-- Search -->
     <section>
-        <form class="search" method="get" action="#">
+        <form class="search" method="get" action="#" enctype="multipart/form-data">
             <input type="text" name="query" placeholder="Search" />
         </form>
     </section>
@@ -46,8 +46,11 @@
 
         @if (_signInManager.IsSignedIn(User))
         {
+
+            string imgName = "~/images/" + @User.Identity.Name + ".jpg";
+            <img class="imgL" src='@Url.Content(imgName)' alt="img" />
             <ul class="actions stacked">
-                <a asp-area="" asp-controller="User" asp-action="Edit" asp-route-name="@User.Identity.Name" asp-route-id="@this.User">Edit User @User.Identity.Name</a>
+                <a style="text-align:center" asp-area="" asp-controller="User" asp-action="Edit" asp-route-name="@User.Identity.Name" asp-route-id="@this.User">Edit User @User.Identity.Name</a>
 
                 <li class="button large fit lbnHello">Hello! @User.Identity.Name</li>
                 <li><a id="registerLink" class="button large fit" asp-area="" asp-controller="Account" asp-action="Logout">Log off</a></li>
