--- a/NewsApp/Views/Home/ShowArctcle.cshtml
+++ b/NewsApp/Views/Home/ShowArctcle.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<h1>@Model.Title</h1>
-<h3>@Model.Subtitle</h3>
+<h1>@Html.Raw(Model.Title)</h1>
+<h3>@Html.Raw(Model.Subtitle)</h3>
 <img src="@Model.TitleImagePath" alt="pic" />
-<p>@Model.FullText</p>
+<p>@Html.Raw(Model.FullText)</p>
