--- a/NewsApp/Views/Shared/_FooterPartial.cshtml
+++ b/NewsApp/Views/Shared/_FooterPartial.cshtml
@@ -6,6 +6,8 @@
         <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
         <li><a href="mailto:Alexjjgugl21@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
         <li><a href="tel:+79101216244" class="icon solid fa-phone"><span class="label">+7 910 121 62 44</span></a></li>
+        <li><a onclick="openFeedBackWind();" class="FeedBackLink">Give FeedBack</a></li>
     </ul>
     <p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+    
 </section>
