--- a/NewsApp/Views/Shared/_HeaderPartial.cshtml
+++ b/NewsApp/Views/Shared/_HeaderPartial.cshtml
@@ -6,9 +6,10 @@
             <li><a asp-area="admin" asp-controller="Home" asp-action="Index">Admin</a></li>
             <li><a href="#">Ipsum</a></li>
             <li><a href="#">Feugiat</a></li>
-            <li><a href="#">Tempus</a></li>
+            <li><a style="cursor: pointer" onclick="openFeedBackWind();">Give Feed back</a></li>
             <li><a asp-area="" asp-controller="Home" asp-action="Contacts">Contacts</a></li>
         </ul>
+        <div class="indicator"></div>
     </nav>
     <nav class="main">
         <ul>
