--- a/NewsApp/Views/Shared/_ScriptsPartial.cshtml
+++ b/NewsApp/Views/Shared/_ScriptsPartial.cshtml
@@ -1,9 +1,11 @@
-﻿
-<!-- Scripts -->
+﻿<!-- Scripts -->
 <script src="~/js/jquery.min.js"></script>
 
 <script src="~/js/browser.min.js"></script>
 <script src="~/js/breakpoints.min.js"></script>
 <script src="~/js/util.js"></script>
 <script src="~/js/main.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.js"></script>
 <script src="~/js/site.js"></script>
